fix: fix colors, banner names, logo

--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here">
     <meta content="" name="keywords">
-    <title>HMU TRAVEL</title>
+    <title>ADLV TRAVEL</title>
     <!-- Favicons-->
     <link href="" rel="icon">
     <link href="" rel="apple-touch-icon">
@@ -198,13 +198,13 @@
 <section class="about-main box">
     <div class="about-box">
         <div class="container">
-            Coming to HMU Travel, you will be immersed in the fresh nature, participate in entertainment activities, relax and take a break to get rid of all the worries and chaos of life. The luxury hotel area with a full range of amenities includes a variety of modern rooms and bungalows combining traditional style, a multi-function jacuzzi swimming pool system with a system of restaurants, conference rooms, amusement parks, restaurant&hellip;<br />
+            Coming to ADLV Travel, you will be immersed in the fresh nature, participate in entertainment activities, relax and take a break to get rid of all the worries and chaos of life. The luxury hotel area with a full range of amenities includes a variety of modern rooms and bungalows combining traditional style, a multi-function jacuzzi swimming pool system with a system of restaurants, conference rooms, amusement parks, restaurant&hellip;<br />
 <br />
-HMU Travel with villas and bungalows is fully equipped, the interior space is decorated in a luxurious style that blends traditional Vietnamese features and modern Western features. We have a staff of well-trained, professional and professional style, dedicated service.<br />
+ADLV Travel with villas and bungalows is fully equipped, the interior space is decorated in a luxurious style that blends traditional Vietnamese features and modern Western features. We have a staff of well-trained, professional and professional style, dedicated service.<br />
 <br />
-HMU Travel provides a full range of convenient services, has quick check-in procedures, free public wi-fi covers the entire tour&hellip; The highlight of Putan Hotel is the restaurant that offers both Western cuisine. East and West are built and served on the top floor. You can enjoy a delicious dinner while watching the starry sky and the city at night. In addition, guests can enjoy other services such as spa, gym right in the hotel area. It&#39;s great that your habits of health training and self-care are still maintained regularly during long vacations.<br />
+ADLV Travel provides a full range of convenient services, has quick check-in procedures, free public wi-fi covers the entire tour&hellip; The highlight of Putan Hotel is the restaurant that offers both Western cuisine. East and West are built and served on the top floor. You can enjoy a delicious dinner while watching the starry sky and the city at night. In addition, guests can enjoy other services such as spa, gym right in the hotel area. It&#39;s great that your habits of health training and self-care are still maintained regularly during long vacations.<br />
 <br />
-HMU Travel is confident to bring you emotional sublimation, the best and most wonderful experiences during your vacation. Come to us, we guarantee that you will not regret.
+ADLV Travel is confident to bring you emotional sublimation, the best and most wonderful experiences during your vacation. Come to us, we guarantee that you will not regret.
         </div>
         
     </div>
