--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here">
     <meta content="" name="keywords">
-    <title>HMU TRAVEL</title>
+    <title>ADLV TRAVEL</title>
     <!-- Favicons-->
     <link href="" rel="icon">
     <link href="" rel="apple-touch-icon">
@@ -347,7 +347,7 @@
                                         <span class="fa fa-globe"></span>
                                     </div>
                                     <div class="info-text pl-3">
-                                        <p><span class="info-title">Website:</span> <a href="#">http://hmutravel.webtour.vn</a></p>
+                                        <p><span class="info-title">Website:</span> <a href="#">http://ADLVtravel.webtour.vn</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -428,7 +428,7 @@
                         <div class="footer__col">
                             <ul class="footer__list">
                                 <li>
-                                    <h3 class="footer__head">HMU TRAVELS &amp; RESORTS</h3>
+                                    <h3 class="footer__head">ADLV TRAVELS &amp; RESORTS</h3>
                                 </li>
                                 <li>
                                     <a href="javascript:void(0)"><i class="fas fa-map-marker-alt"></i>No. 175 Tay Son,Dong Da, Hanoi</a>
@@ -495,7 +495,7 @@
         <div class="copy-right">
             <div class="container">
                 <div class="cr-detail">
-                    <div class="cr-text">HMU TRAVEL 2022 All Rights Reserved</div>
+                    <div class="cr-text">ADLV TRAVEL 2022 All Rights Reserved</div>
                     <div class="social">
                         <a><i class="fab fa-facebook-f"></i></a>
                         <a><i class="fab fa-twitter"></i></a>
