--- a/HTML/promotions.html
+++ b/HTML/promotions.html
@@ -213,7 +213,7 @@
                   <tr>
                     <td width="10"><input type="checkbox" name="check1" value="1"></td>
                     <td>01</td>
-                    <td>HMU012</td>
+                    <td>ADLV012</td>
                     <td>COMBO DU LỊCH HÀ NỘI - SAPA - HẠ LONG</td>
                     <td>4 NGÀY 3 ĐÊM</td>
                     <td>
@@ -233,7 +233,7 @@
                   <tr>
                     <td width="10"><input type="checkbox" name="check1" value="1"></td>
                     <td>02</td>
-                    <td>HMU345</td>
+                    <td>ADLV345</td>
                     <td>COMBO DU LỊCH HÀ NỘI - PHÚ QUỐC</td>
                     <td>3 NGÀY 2 ĐÊM</td>
 
@@ -252,7 +252,7 @@
                 <tr>
                     <td width="10"><input type="checkbox" name="check1" value="1"></td>
                     <td>01</td>
-                    <td>HMU012</td>
+                    <td>ADLV012</td>
                     <td>COMBO DU LỊCH HÀ NỘI - SAPA - HẠ LONG</td>
                     <td>4 NGÀY 3 ĐÊM</td>
                     <td>
@@ -271,7 +271,7 @@
                   <tr>
                     <td width="10"><input type="checkbox" name="check1" value="1"></td>
                     <td>02</td>
-                    <td>HMU345</td>
+                    <td>ADLV345</td>
                     <td>COMBO DU LỊCH HÀ NỘI - PHÚ QUỐC</td>
                     <td>3 NGÀY 2 ĐÊM</td>
 
@@ -436,7 +436,7 @@ Only 1,700,000 VND / 2 people</strong>
                 <div class="copy-right">
                     <div class="container">
                         <div class="cr-detail">
-                            <div class="cr-text">HMU Travels 2022 All Rights Reserved</div>
+                            <div class="cr-text">ADLV Travels 2022 All Rights Reserved</div>
                             <div class="social">
                                 <a><i class="fab fa-facebook-f"></i></a>
                                 <a><i class="fab fa-twitter"></i></a>
