--- a/HTML/room.html
+++ b/HTML/room.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here">
     <meta content="" name="keywords">
-    <title>HMU TRAVEL</title>
+    <title>ADLV TRAVEL</title>
     <!-- Favicons-->
     <link href="" rel="icon">
     <link href="" rel="apple-touch-icon">
@@ -226,7 +226,7 @@
                                         <li>2 Single beds</li>
                                         <li class="mr-0">2 persons</li>
                                     </ul>
-                                    <div class="room-text"><div style="text-align:justify">HMU Tour boasts 10 combo HÀ NỘI - SAPA - HẠ LONG which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Travel is a combination of beauty, aesthetics and art.</div>
+                                    <div class="room-text"><div style="text-align:justify">ADLV Tour boasts 10 combo HÀ NỘI - SAPA - HẠ LONG which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Travel is a combination of beauty, aesthetics and art.</div>
 </div>
                                 </div>
                                 <div class="room_btn"><a class="detail-btn" href="/HTML/room_deluxe.html"> BooK Tour</a></div>
@@ -269,7 +269,7 @@
                                         <li>2 Single beds</li>
                                         <li class="mr-0">2 persons</li>
                                     </ul>
-                                    <div class="room-text"><div style="text-align:justify">HMU Tour boasts SÀI GÒN - NHA TRANG which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Travel is a combination of beauty, aesthetics and art.</div>
+                                    <div class="room-text"><div style="text-align:justify">ADLV Tour boasts SÀI GÒN - NHA TRANG which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Travel is a combination of beauty, aesthetics and art.</div>
 </div>
                                 </div>
                                 <div class="room_btn"><a class="detail-btn" href="/HTML/room_deluxe.html">BooK Tour</a></div>
@@ -291,7 +291,7 @@
                                         <li>2 Single beds</li>
                                         <li class="mr-0">2 persons</li>
                                     </ul>
-                                    <div class="room-text"><div style="text-align:justify">HMU Tour boasts SAPA which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Travel is a combination of beauty, aesthetics and art.</div>
+                                    <div class="room-text"><div style="text-align:justify">ADLV Tour boasts SAPA which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Travel is a combination of beauty, aesthetics and art.</div>
 </div>
                                 </div>
                                 <div class="room_btn"><a class="detail-btn" href="/HTML/room_deluxe.html">BooK Tour</a></div>
@@ -313,7 +313,7 @@
                                         <li>2 Single beds</li>
                                         <li class="mr-0">2 persons</li>
                                     </ul>
-                                    <div class="room-text"><div style="text-align:justify">HMU Tour boasts ĐÀ LẠT View which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Travel is a combination of beauty, aesthetics and art.</div>
+                                    <div class="room-text"><div style="text-align:justify">ADLV Tour boasts ĐÀ LẠT View which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Travel is a combination of beauty, aesthetics and art.</div>
 </div>
                                 </div>
                                 <div class="room_btn"><a class="detail-btn" href="/HTML/room_deluxe.html">BooK Tour</a></div>
@@ -335,7 +335,7 @@
                                         <li>2 Single beds</li>
                                         <li class="mr-0">2 persons</li>
                                     </ul>
-                                    <div class="room-text"><div style="text-align:justify">HMU Tour boasts NÚI BÀ ĐEN-TÂY NINH-CỦ CHI which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Travel is a combination of beauty, aesthetics and art.</div>
+                                    <div class="room-text"><div style="text-align:justify">ADLV Tour boasts NÚI BÀ ĐEN-TÂY NINH-CỦ CHI which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Travel is a combination of beauty, aesthetics and art.</div>
 </div>
                                 </div>
                                 <div class="room_btn"><a class="detail-btn" href="/HTML/room_deluxe.html">BooK Tour</a></div>
@@ -359,7 +359,7 @@
                         <div class="footer__col">
                             <ul class="footer__list">
                                 <li>
-                                    <h3 class="footer__head">HMU TRAVELS &amp; RESORTS</h3>
+                                    <h3 class="footer__head">ADLV TRAVELS &amp; RESORTS</h3>
                                 </li>
                                 <li>
                                     <a href="javascript:void(0)"><i class="fas fa-map-marker-alt"></i>No. 175 Tay Son,Dong Da, Hanoi</a>
@@ -426,7 +426,7 @@
         <div class="copy-right">
             <div class="container">
                 <div class="cr-detail">
-                    <div class="cr-text">HMU Travel 2022 All Rights Reserved</div>
+                    <div class="cr-text">ADLV Travel 2022 All Rights Reserved</div>
                     <div class="social">
                         <a><i class="fab fa-facebook-f"></i></a>
                         <a><i class="fab fa-twitter"></i></a>
