--- a/HTML/room_deluxe.html
+++ b/HTML/room_deluxe.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here">
     <meta content="" name="keywords">
-    <title>HMU TRAVEL</title>
+    <title>ADLV TRAVEL</title>
     <!-- Favicons-->
     <link href="" rel="icon">
     <link href="" rel="apple-touch-icon">
@@ -232,7 +232,7 @@
                     <div class="room-left">
                         <h3 class="room-dt__title">HÀ NỘI - SAPA - HẠ LONG  VIEW</h3>
                         <div class="room-dt__des mb-4">
-                            <div style="text-align: justify;">HMU Travel boasts HÀ NỘI - SAPA - HẠ LONG View which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Hotel is a combination of beauty, aesthetics and art. Deluxe City View are arranged in a reasonable area of 30 m<sup>2</sup>&nbsp;and fully equipped with modern facilities such as&nbsp;LCD cable television, airconditioner, ensuite bedroom featuring standing hot and cold showwer and modern toiletries. The tour has wide windows opening to the lovely landscape of Ha Noi. Deluxe is your smart choice for budget travellers because of its convenience and reasonable price. Connecting tours are also availble for groups and families.</div>
+                            <div style="text-align: justify;">ADLV Travel boasts HÀ NỘI - SAPA - HẠ LONG View which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Hotel is a combination of beauty, aesthetics and art. Deluxe City View are arranged in a reasonable area of 30 m<sup>2</sup>&nbsp;and fully equipped with modern facilities such as&nbsp;LCD cable television, airconditioner, ensuite bedroom featuring standing hot and cold showwer and modern toiletries. The tour has wide windows opening to the lovely landscape of Ha Noi. Deluxe is your smart choice for budget travellers because of its convenience and reasonable price. Connecting tours are also availble for groups and families.</div>
                             <div style="text-align: justify;">The utmost comfort of 16 Senior De. City view originates from the minimalism and sophistication in the design and decor of the Neo-Classical Style. The tours are spacious, cozy and wisely-arranged in 35 m<sup>2</sup>, with 3 pairs of connecting tours. Bright tone of the tours harmonies with bright colors and sophisticated curves of furniture. Senior De. City view features all the amenities you would expect from cable TV, air-conditioner, bathroom with hot and cold shower and bathtub, to high-quality linen beds for your sound sleep and relaxation. Senior De. City view Tour are furnished with cystal windows for amazing views of Hanoi.&nbsp;</div>
 
                         </div>
@@ -420,7 +420,7 @@
                     <div class="footer__col">
                         <ul class="footer__list">
                             <li>
-                                <h3 class="footer__head">HMU TRAVEL &amp; RESORTS</h3>
+                                <h3 class="footer__head">ADLV TRAVEL &amp; RESORTS</h3>
                             </li>
                             <li>
                                 <a href="javascript:void(0)"><i class="fas fa-map-marker-alt"></i>No. 175 Tay Son,Dong Da, Hanoi</a>
@@ -487,7 +487,7 @@
     <div class="copy-right">
         <div class="container">
             <div class="cr-detail">
-                <div class="cr-text">HMU Travel 2022 All Rights Reserved</div>
+                <div class="cr-text">ADLV Travel 2022 All Rights Reserved</div>
                 <div class="social">
                     <a><i class="fab fa-facebook-f"></i></a>
                     <a><i class="fab fa-twitter"></i></a>
