--- a/HTML/room_senior.html
+++ b/HTML/room_senior.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here">
     <meta content="" name="keywords">
-    <title>HMU Travel</title>
+    <title>ADLV Travel</title>
     <!-- Favicons-->
     <link href="" rel="icon">
     <link href="" rel="apple-touch-icon">
@@ -385,7 +385,7 @@
                                     <li class="mr-0">2 persons</li>
                                 </ul>
                                 <div class="room-text">
-                                    <div style="text-align: justify;">HMU Travel boasts 10 Deluxe City View which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Hotel is a combination of beauty, aesthetics and art. Deluxe City View are arranged in a reasonable area of 30 m<sup>2</sup>&nbsp;and fully equipped with modern facilities such as&nbsp;LCD cable television, airconditioner, ensuite bedroom featuring standing hot and cold showwer and modern toiletries. The room has wide windows opening to the lovely landscape of Ha Noi. Deluxe is your smart choice for budget travellers because of its convenience and reasonable price. Connecting rooms are also availble for groups and families.</div>
+                                    <div style="text-align: justify;">ADLV Travel boasts 10 Deluxe City View which offer a relaxing and elegant touch of the Neo-Classical Style. Each tour in Putan Hotel is a combination of beauty, aesthetics and art. Deluxe City View are arranged in a reasonable area of 30 m<sup>2</sup>&nbsp;and fully equipped with modern facilities such as&nbsp;LCD cable television, airconditioner, ensuite bedroom featuring standing hot and cold showwer and modern toiletries. The room has wide windows opening to the lovely landscape of Ha Noi. Deluxe is your smart choice for budget travellers because of its convenience and reasonable price. Connecting rooms are also availble for groups and families.</div>
 
                                 </div>
                                 <div class="room_btn">
@@ -407,7 +407,7 @@
                         <div class="footer__col">
                             <ul class="footer__list">
                                 <li>
-                                    <h3 class="footer__head">HMU TRAVELS &amp; RESORTS</h3>
+                                    <h3 class="footer__head">ADLV TRAVELS &amp; RESORTS</h3>
                                 </li>
                                 <li>
                                     <a href="javascript:void(0)"><i class="fas fa-map-marker-alt"></i>No. 175 Tay Son,Dong Da, Hanoi</a>
@@ -474,7 +474,7 @@
         <div class="copy-right">
             <div class="container">
                 <div class="cr-detail">
-                    <div class="cr-text">HMU Travel 2022 All Rights Reserved</div>
+                    <div class="cr-text">ADLV Travel 2022 All Rights Reserved</div>
                     <div class="social">
                         <a><i class="fab fa-facebook-f"></i></a>
                         <a><i class="fab fa-twitter"></i></a>
