--- a/HTML/home.html
+++ b/HTML/home.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here">
     <meta content="" name="keywords">
-    <title>HMU TRAVEL </title>
+    <title>ADLV TRAVEL </title>
     <!-- Favicons-->
     <link href="" rel="icon">
     <link href="" rel="apple-touch-icon">
@@ -188,14 +188,14 @@
             <img src="/IMG/banner/bn1.jpg" class="d-block w-100" alt="">
             <div class="banner__caption">
                 <h3 class="animate__animated">Tour &amp; Resort</h3>
-                <h1 class="animate__animated">HMU TRAVEL</h1>
+                <h1 class="animate__animated">ADLV TRAVEL</h1>
             </div>
           </div>
           <div class="carousel-item">
             <img src="/IMG/banner/bn2.jpg" class="d-block w-100" alt="">
             <div class="banner__caption">
                 <h3 class="animate__animated">Tour&amp;Resort</h3>
-                <h1 class="animate__animated">HMU TRAVEL</h1>
+                <h1 class="animate__animated">ADLV TRAVEL</h1>
             </div>
           </div>
         </div>
@@ -279,13 +279,13 @@
                 <div>
                     <div class="box__title about__title">
                         <!-- <h5><a href="/HTML/aboutus.html">ABOUT US</a></h5> -->
-                        <h3>WELCOME TO HMU TRAVEL</h3>
+                        <h3>WELCOME TO ADLV TRAVEL</h3>
                     </div>
                     <div class="about__desc">
-                        Coming to HMU Travel, you will be immersed in the fresh nature, participate in entertainment activities, relax and take a break from the worries and chaos of life. The luxury Tour area with a full range of amenities including a variety of modern rooms and bungalows combining traditional style, a multi-function jacuzzi swimming pool system with a system of restaurants, conference rooms, amusement parks, restaurant…;
+                        Coming to ADLV Travel, you will be immersed in the fresh nature, participate in entertainment activities, relax and take a break from the worries and chaos of life. The luxury Tour area with a full range of amenities including a variety of modern rooms and bungalows combining traditional style, a multi-function jacuzzi swimming pool system with a system of restaurants, conference rooms, amusement parks, restaurant…;
                     </div>
                     <div class="about__desc">
-                        HMU Travel with villas and bungalows is fully equipped, the interior space is decorated in a luxurious style that blends traditional Vietnamese features and modern Western features. We have a staff of well-trained, professional and professional style, dedicated service.
+                        ADLV Travel with villas and bungalows is fully equipped, the interior space is decorated in a luxurious style that blends traditional Vietnamese features and modern Western features. We have a staff of well-trained, professional and professional style, dedicated service.
                     </div>
                     
                     <!-- <a class="btn view-more" href="/HTML/aboutus.html">LEARN MORE</a> -->
@@ -316,7 +316,7 @@
                         <li class="mr-0">2 persons</li>
                     </ul>
                     <div class="room__text">
-                        <div style="text-align:justify">HMU Travel boasts 10 Deluxe City View which offer a relaxing and elegant touch of the Neo-Classical Style. Each room in Putan Hotel is a combination of beauty, aesthetics and art.</div>
+                        <div style="text-align:justify">ADLV Travel boasts 10 Deluxe City View which offer a relaxing and elegant touch of the Neo-Classical Style. Each room in Putan Hotel is a combination of beauty, aesthetics and art.</div>
 
                     </div>
                     <div class="room-btn"><a class="btn" href="/HTML/room_deluxe.html">Details</a></div>
@@ -461,7 +461,7 @@ With only 1,200,000 VND / 2 people
                     <div class="footer__col">
                         <ul class="footer__list">
                             <li>
-                                <h3 class="footer__head">HMU Travel &amp; RESORTS</h3>
+                                <h3 class="footer__head">ADLV Travel &amp; RESORTS</h3>
                             </li>
                             <li>
                                 <a href="javascript:void(0)"><i class="fas fa-map-marker-alt"></i>No. 175 Tay Son,Dong Da, Hanoi</a>
@@ -528,7 +528,7 @@ With only 1,200,000 VND / 2 people
     <div class="copy-right">
         <div class="container">
             <div class="cr-detail">
-                <div class="cr-text"> HMU Travel 2022 All Rights Reserved</div>
+                <div class="cr-text"> ADLV Travel 2022 All Rights Reserved</div>
                 <div class="social">
                     <a><i class="fab fa-facebook-f"></i></a>
                     <a><i class="fab fa-twitter"></i></a>
