--- a/HTML/restaurant.html
+++ b/HTML/restaurant.html
@@ -230,7 +230,7 @@
                                 <div class="footer__col">
                                     <ul class="footer__list">
                                         <li>
-                                            <h3 class="footer__head">HMU TRAVELS &amp; RESORTS</h3>
+                                            <h3 class="footer__head">ADLV TRAVELS &amp; RESORTS</h3>
                                         </li>
                                         <li>
                                             <a href="javascript:void(0)"><i class="fas fa-map-marker-alt"></i>No. 175 Tay Son, Dong Da, Hanoi</a>
@@ -297,7 +297,7 @@
                 <div class="copy-right">
                     <div class="container">
                         <div class="cr-detail">
-                            <div class="cr-text">HMU Trvels 2022 All Rights Reserved</div>
+                            <div class="cr-text">ADLV Trvels 2022 All Rights Reserved</div>
                             <div class="social">
                                 <a><i class="fab fa-facebook-f"></i></a>
                                 <a><i class="fab fa-twitter"></i></a>
