--- a/HTML/services.html
+++ b/HTML/services.html
@@ -289,7 +289,7 @@
                 <div class="copy-right">
                     <div class="container">
                         <div class="cr-detail">
-                            <div class="cr-text">HMU Travels 2022 All Rights Reserved</div>
+                            <div class="cr-text">ADLV Travels 2022 All Rights Reserved</div>
                             <div class="social">
                                 <a><i class="fab fa-facebook-f"></i></a>
                                 <a><i class="fab fa-twitter"></i></a>
